--- a/src/main/resources/templates/people/show.html
+++ b/src/main/resources/templates/people/show.html
@@ -28,6 +28,11 @@
       <hr/>
   </div>
 
+<form th:method="GET" th:action="@{/people/{id}/edit(id=${person.getId()})}">
+    <input type="submit" value="edit"/>
+
+</form>
+
 
 
 </body>
