--- a/src/main/resources/templates/books/show.html
+++ b/src/main/resources/templates/books/show.html
@@ -6,5 +6,14 @@
 </head>
 <body>
 <p th:text="${book.getTitle() + ', ' + book.getAuthor() + ', ' + book.getYear()}">VALUE</p>
+
+<div th:if="${owner}">
+    <span> Book now:  </span> <span th:text="${owner.getFullName()}">Person Name</span>
+    <form th:method="PATCH" th:action="@{/books/{id}/release(id=${book.getId()})}">
+        <input type="submit" value="Release Book"/>
+    </form>
+
+</div>
+
 </body>
 </html>
